# Station-F

./: .gitignore  AI_AGENT_API_GUIDE.md  AI_AGENT_QUICKREF.md  ARCHITECTURE.md  CHANGELOG_UI.md  FILES_OVERVIEW.md  FRONTEND_DESIGN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_AI_AGENT.md  UPLOAD_GUIDE.md  ai_agent_example.py  app.py  batch_upload_example.py  demo_quick_upload.py  podcast_api_client.py  podcasts.db  pyproject.toml  requirements.txt  simple_agent_upload.py  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  upload_audio.py  upload_from_elevenlabs.py
backend/: __init__.py  db.py  main.py  models.py  storage.py
